Se agregó una excepción en el método PUT (304 Not Modified) y ya fue aplicada en los métodos PUT de Patient y Appointment.